# ism-data

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-PublicDomain  README.md  REUSE.toml  SECURITY.md  build.rs  mise.toml  provenance.toml
.github/ISSUE_TEMPLATE/: upstream-update.md
.github/workflows/: check-upstream.yml  codeql.yml  integrity.yml  release.yml  reproduce-from-zips.yml
crates/ism-add-erm/: Cargo.toml  README.md  build.rs
crates/ism-arh/: Cargo.toml  README.md  build.rs
crates/ism-atom/: Cargo.toml  README.md  build.rs
crates/ism-audit/: Cargo.toml  README.md  build.rs
crates/ism-authcat/: Cargo.toml  README.md  build.rs
crates/ism-base-tdf/: Cargo.toml  README.md  build.rs
crates/ism-boe/: Cargo.toml  README.md  build.rs
crates/ism-brk-srch/: Cargo.toml  README.md  build.rs
crates/ism-cdr-ra/: Cargo.toml  README.md  build.rs
crates/ism-cdsm/: Cargo.toml  README.md  build.rs
crates/ism-cdsm-tdf/: Cargo.toml  README.md  build.rs
crates/ism-cem/: Cargo.toml  README.md  build.rs
crates/ism-csr/: Cargo.toml  README.md  build.rs
crates/ism-data/: Cargo.toml  README.md
crates/ism-data/src/: lib.rs
crates/ism-ded/: Cargo.toml  README.md  build.rs
crates/ism-deliver/: Cargo.toml  README.md  build.rs
crates/ism-dhzm/: Cargo.toml  README.md  build.rs
crates/ism-dhzm-tdf/: Cargo.toml  README.md  build.rs
crates/ism-dhzmc-tdf/: Cargo.toml  README.md  build.rs
crates/ism-domex/: Cargo.toml  README.md  build.rs
crates/ism-erm/: Cargo.toml  README.md  build.rs
crates/ism-fac/: Cargo.toml  README.md  build.rs
crates/ism-fsd/: Cargo.toml  README.md  build.rs
crates/ism-ic-docbook/: Cargo.toml  README.md  build.rs
crates/ism-ic-edh/: Cargo.toml  README.md  build.rs
crates/ism-ic-genc/: Cargo.toml  README.md  build.rs
crates/ism-ic-id/: Cargo.toml  README.md  build.rs
crates/ism-ic-id/data/IC-ID/: IC-IDpackage.properties
crates/ism-ic-id/data/IC-ID/Schema/IC-ID/: IC-ID.xsd
crates/ism-ic-id/data/IC-ID/SchemaGuide/files/: IC-ID_xsd_Attribute_icid_identifier.html  IC-ID_xsd_Element_icid_Identifier.html  SchemaGuide.html  SchemaGuide.indexList.html  SchemaGuide.indexListcomp.html
crates/ism-ic-id/data/IC-ID/Schematron/IC-ID/: IC-ID_XML.sch  IC-ID_XML.xsl
crates/ism-ic-id/data/IC-ID/Schematron/IC-ID/Lib/: ICIdentifierRestrictions.sch
crates/ism-ic-id/data/IC-ID/Schematron/IC-ID/Rules/: IC-ID_ID_00001.sch
crates/ism-ic-id/data/_provenance/: manifest.sha256  manifest.txt
crates/ism-ic-id/src/: lib.rs
crates/ism-ic-sf/: Cargo.toml  README.md  build.rs
crates/ism-ico-aces/: Cargo.toml  README.md  build.rs
crates/ism-ico-ntk/: Cargo.toml  README.md  build.rs
crates/ism-intdis/: Cargo.toml  README.md  build.rs
crates/ism-irm/: Cargo.toml  README.md  build.rs
crates/ism-ism-aces/: Cargo.toml  README.md  build.rs
crates/ism-ism-rollup/: Cargo.toml  README.md  build.rs
crates/ism-ismcat/: Cargo.toml  README.md  build.rs
crates/ism-its-ms/: Cargo.toml  README.md  build.rs
crates/ism-its-om/: Cargo.toml  README.md  build.rs
crates/ism-lic/: Cargo.toml  README.md  build.rs
crates/ism-mac/: Cargo.toml  README.md  build.rs
crates/ism-manage/: Cargo.toml  README.md  build.rs
crates/ism-mime/: Cargo.toml  README.md  build.rs
crates/ism-mn/: Cargo.toml  README.md  build.rs
crates/ism-mnt/: Cargo.toml  README.md  build.rs
crates/ism-ntk/: Cargo.toml  README.md  build.rs
crates/ism-ntk-aces/: Cargo.toml  README.md  build.rs
crates/ism-oc-ntk-aces/: Cargo.toml  README.md  build.rs
crates/ism-pm/: Cargo.toml  README.md  build.rs
crates/ism-pma/: Cargo.toml  README.md  build.rs
crates/ism-qm/: Cargo.toml  README.md  build.rs
crates/ism-revrecall/: Cargo.toml  README.md  build.rs
crates/ism-role/: Cargo.toml  README.md  build.rs
crates/ism-rr-id/: Cargo.toml  README.md  build.rs
crates/ism-rr-sm/: Cargo.toml  README.md  build.rs
crates/ism-uias/: Cargo.toml  README.md  build.rs
crates/ism-uias-apcs/: Cargo.toml  README.md  build.rs
crates/ism-usagency/: Cargo.toml  README.md  build.rs
src/: lib.rs
tools/: check_upstream.py  published.toml  rederive_manifest.py  release.py  reproduce_from_zips.py  split_into_crates.py  sync_published.py  upstream_baseline.json  upstream_baseline.json.license
(+6155 files in other folders)
