# SPDX-License-Identifier: MIT-0 OR Unlicense

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "2023.6.9"
edition = "2024"
license = "LicenseRef-PublicDomain AND (MIT-0 OR Unlicense)"
repository = "https://github.com/marquetools/ism-data"

[workspace.dependencies]
sha2 = "0.11"
